k8s/apps/temporal/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: temporal-web
  namespace: temporal
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`temporal.fomiller.com`)
      kind: Rule
      services:
        - name: temporal-web
          port: 8080
